# classicube-command-gui-plugin

./: .gitmodules  Cargo.toml
.github/workflows/: rust.yml  web.yml
CommandGuiHelperPlugin/: .gitignore  CommandGuiHelperPlugin.sln
CommandGuiHelperPlugin/CommandGuiHelperPlugin/: CommandGuiHelperPlugin.cs  CommandGuiHelperPlugin.csproj
CommandGuiHelperPlugin/CommandGuiHelperPlugin/Properties/: AssemblyInfo.cs
src/: async_manager.rs  chat.rs  error.rs  lib.rs
src/plugin/: command.rs  helpers.rs  json_types.rs  map_url_listener.rs  mod.rs  render_text.rs  tab_list_events.rs  websocket_server.rs
src/plugin/chat_parser/: helpers.rs  mod.rs
src/plugin/chat_parser/block_props/: helpers.rs  mod.rs
src/plugin/chat_parser/blocks/: helpers.rs  infos.rs  mod.rs  types.rs
src/plugin/chat_parser/players/: helpers.rs  mod.rs
src/plugin/chat_parser/ranks/: helpers.rs  mod.rs
web/: .eslintrc.js  .gitignore  build.js  package.json  tsconfig.json
web/src/: App.tsx  Connection.ts  TabList.tsx  index.tsx  types.d.ts
web/src/components/: ColorCodedText.tsx  RenderedText.tsx
web/src/containers/: App.tsx  BlockProperties.tsx  Blocks.tsx  Commands.tsx  SelectEnumItems.tsx  TabList.tsx
web/src/types/: events.ts  index.ts  messages.ts  other.ts
